<resources>
    <string name="app_name">動物翻翻看</string>
    <string name="title_activity_welcome">welcome</string>

    <string name="main">讓我們來一起拯救瀕臨絕種動物吧!!</string>
    <string name="guest">冒險家：</string>
    <string name="username">Mary</string>
    <string name="user01">User01</string>
    <string name="user02">User02</string>
    <string name="user03">User03</string>
    <string name="BEnter">進入遊戲</string>

    <string name="intro">準備好展開奇妙旅程了嗎?</string>
    <string name="Bstart">開始遊戲</string>
    <string name="BCopyright">版權說明</string>
    <string name="BGallery">動物圖鑑</string>
    <string name="BSetup">遊戲設定</string>
    <string name="BYoho">開發者選項</string>

    <string name="menu_gallery">動物圖鑑</string>
    <string name="menu_volume">聲音調整</string>
    <string name="menu_reset">資料重置</string>
    <string name="menu_copyright">資料出處</string>
    <string name="menu_developer">製作團隊</string>


</resources>
