<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.esy.mobilehost.android.flopcard.MainActivity"

    style="@style/bg01"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/username"
        android:layout_marginTop="159dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="67dp"
        android:textSize="30dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user01"
        android:id="@+id/rBUser01"
        android:checked="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textColor="#f20d0d" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user02"
        android:id="@+id/rBUser02"
        android:checked="false"
        android:textSize="30dp"
        android:layout_below="@+id/rBUser01"
        android:layout_alignEnd="@+id/rBUser01" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user03"
        android:id="@+id/rBUser03"
        android:checked="false"
        android:textSize="30dp"
        android:layout_below="@+id/rBUser02"
        android:layout_alignEnd="@+id/rBUser02" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:id="@+id/main"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="進入遊戲"
        android:id="@+id/Benter"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:id="@+id/guest"
        android:textSize="30dp"
        android:layout_alignTop="@+id/username"
        android:layout_toStartOf="@+id/username"
        android:layout_marginEnd="47dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_above="@+id/guest"
        android:layout_alignStart="@+id/rBUser01" />
</RelativeLayout>
